ci: Fix LLVM caching
- Cache the object folder as well as the archive.
- Delete the build folder before caching to reduce disk usage.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,7 @@ jobs:
     - name: Fetch cached LLVM build
       uses: actions/cache@v3
       with:
-        path: external/CppSharp/build/llvm/*.tar.xz
+        path: external/CppSharp/build/llvm/**
         key: ${{ steps.llvm-build-id.outputs.id }}
 
     - name: Build and install workload
@@ -86,6 +86,11 @@ jobs:
       run: |
         dotnet nuget add source --username ${{ github.repository_owner }} --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
         dotnet nuget push out/nuget/** --api-key ${{ secrets.GITHUB_TOKEN }} --source "github"
+
+      # Clean up unnecessary files to prevent them from being cached
+    - name: Clean up LLVM
+      run: |
+        rm -rf external/CppSharp/build/llvm/llvm-project
 
     # - name: Publish dev
     #   if: github.ref == 'refs/heads/master'
