--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ on:
     - master
 
 permissions:
+  contents: write
   packages: write
 
 jobs:
@@ -86,6 +87,17 @@ jobs:
       run: |
         dotnet nuget add source --username ${{ github.repository_owner }} --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
         dotnet nuget push out/nuget/** --api-key ${{ secrets.GITHUB_TOKEN }} --source "github"
+
+    - name: Create prerelease
+      if: ${{ github.ref == 'refs/heads/master' }}
+      uses: marvinpinto/action-automatic-releases@latest
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        automatic_release_tag: ${{ steps.gitversion.outputs.semVer }}
+        prerelease: true
+        title: .NET workload for Haiku ${{ steps.gitversion.outputs.semVer }}
+        files: |
+          ${{ github.workspace }}/out/nuget/*
 
       # Clean up unnecessary files to prevent them from being cached
     - name: Clean up LLVM
