build: Pack Haiku API as standalone package
This package would be useful for users who do not wish to install
the full workload.

--- a/src/Haiku/Haiku.csproj
+++ b/src/Haiku/Haiku.csproj
@@ -31,6 +31,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="$(_HaikuRootDirectory)/out/generated/libHaikuGlue.so"
+          CopyToOutputDirectory="PreserveNewest" Link="runtimes/haiku-x64/native/libHaikuGlue.so"
+          Pack="true" PackagePath="runtimes/haiku-x64/native/libHaikuGlue.so" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="$(_HaikuRootDirectory)/generator/HaikuApiGenerator.PostProcessing/HaikuApiGenerator.PostProcessing.csproj" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
