feat: Add templates
Added Haiku C# templates to workload.
The application template is based on the EmptyWindow example.

--- a/workload/Trungnt2910.NET.Sdk.Haiku/WorkloadManifest.in.json
+++ b/workload/Trungnt2910.NET.Sdk.Haiku/WorkloadManifest.in.json
@@ -23,6 +23,10 @@
       "Haiku.Runtime.haiku-x64": {
         "kind": "framework",
         "version": "@VERSION@"
+      },
+      "Haiku.Templates": {
+        "kind": "template",
+        "version": "@VERSION@"
       }
     }
   }
