fix(manifest): Add missing pack
Added missing Haiku.Templates pack to manifest.

--- a/workload/Trungnt2910.NET.Sdk.Haiku/WorkloadManifest.in.json
+++ b/workload/Trungnt2910.NET.Sdk.Haiku/WorkloadManifest.in.json
@@ -6,7 +6,8 @@
         "packs": [
           "Haiku.Sdk",
           "Haiku.Ref",
-          "Haiku.Runtime.haiku-x64"
+          "Haiku.Runtime.haiku-x64",
+          "Haiku.Templates"
         ],
         "platforms": [ "win-x64", "linux-x64", "osx-x64", "osx-arm64", "haiku-x64" ]
       }
