fix(Sdk): Runtime pack name patterns
Use **RID** placeholder instead of hard-coding haiku-x64.

--- a/workload/Haiku.Sdk/Sdk/Sdk.in.targets
+++ b/workload/Haiku.Sdk/Sdk/Sdk.in.targets
@@ -28,7 +28,7 @@
       LatestRuntimeFrameworkVersion="**FromWorkload**"
       TargetingPackName="Haiku.Ref"
       TargetingPackVersion="**FromWorkload**"
-      RuntimePackNamePatterns="Haiku.Runtime.haiku-x64"
+      RuntimePackNamePatterns="Haiku.Runtime.**RID**"
       RuntimePackRuntimeIdentifiers="haiku-x64"
       Profile="Haiku"
     />
